# nuage-cluster

./: .env.sample  .gitignore  .kube-linter.yaml  .sops.yaml  01-recreate-vm-intelmac-1.sh  01-recreate-vm-m1mac-1.sh  01-recreate-vm-win-1.sh  02-create-env.sh  02-setup-playbooks.sh  03-setup-cluster.sh  04-apply-apps.sh  AGENTS.md  README.md  TODO.md  bootstrap-cluster.sh  k  ks  setup-nuage-cluster.sh  trivy.sh
.ssh/: .gitignore  gen-keys.sh  id_ed25519_nixos.pub  ssh_config
.ssh-host/: config_template
crossplane/: README.md  helm-install-steps.md  provider.yaml  vm-controlplane-01.yaml
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard-v2/: app.json
dependency-track/: docker-compose.yml
docs/: TROUBLESHOOTING.md  architecture.md  cloud.md  cluster-architecture.drawio  hardware.drawio  k8s-arch.drawio  memo.md  operations.md  pg-access.sh  replace-all-node.md  secrets-management.md  setup-nuc.md  setup-proxmox.md  setup.md
istio-1.26.2/: README.md  istio-custom.yaml  openssl.cnf
manifests/: appset-infra.yaml  gateway.yaml  ingress.yaml  metallb.yaml  namespaces.yaml  nash-preview.yaml  node-labels.yaml  nuage-dashboard.yaml  postgres.yaml
monitoring-stack/api-gateway-service/: .clinerules  Cargo.toml  Dockerfile  build.rs  design.md
monitoring-stack/api-gateway-service/proto/: user_service.proto
monitoring-stack/api-gateway-service/src/: main.rs
monitoring/gateway/: .env.sample  .gitignore  Cargo.toml  Dockerfile  Gemfile  README.md  gateway_server.rb  test.sh
monitoring/gateway/app/graphql/types/: application_list_type.rb  application_type.rb  mutation_type.rb  push_notification_type.rb  query_type.rb  report_type.rb  vapid_public_key_type.rb
monitoring/gateway/app/services/: kubernetes_service.rb  push_notification_service.rb
monitoring/gateway/config/: application.rb
monitoring/gateway/lib/: report_service_pb.rb  report_service_services_pb.rb
monitoring/gateway/lib/kubernetes/: kubernetes_client.rb  kubernetes_config.rb
monitoring/gateway/lib/tasks/: graphql.rake
monitoring/gateway/proto/: report_service.proto
monitoring/gateway/scripts/: test_get_applications.sh  test_get_reports.sh  test_push.sh
monitoring/gateway/src/: crd.rs  db.rs  k8s.rs  main.rs  micro_gopush.rs
(+934 files in other folders)
