[package]
name = "api-gateway-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = { version = "6.0.1", features = ["tracing"] }
async-graphql-warp = "6.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.3.1"
once_cell = "1.19.0" # For lazy static initialization

# gRPC
tonic = { version = "0.11", features = ["codegen", "prost"] }
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
