[package]
name = "gateway-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
async-graphql = { version = "6.0.11", features = ["chrono", "uuid"] }
async-graphql-actix-web = "6.0.11"
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Added for serde_json::json! macro
reqwest = { version = "0.11", features = ["json"] }
kube = { version = "0.89.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["v1_28"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"
schemars = "0.8"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
